[package]
name = "elk-mq"
version = "0.1.0"
description = "A Message Queue implementation in rust, using Redis as a communication medium."

edition = "2021"
rust-version = "1.65"
authors = [
    "Tijmen Verhoef <tijmenmenno@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/nemjit001/elk-mq"
homepage = "https://github.com/nemjit001/elk-mq"
documentation = "https://github.com/nemjit001/elk-mq"
license = "Apache-2.0"

[lib]
crate-type = [ "lib", "staticlib", "cdylib" ]

[features]
python_bindings = [ "cpython" ]

[dependencies]
redis = { version="0.22" }
serde = { version="1.0", features=[ "derive" ] }
serde_json = { version="1.0" }
uuid = { version="1.2", features=[ "v4" ] }
regex = { version="1.7" }
lazy_static = { version="1.4" }
cpython = { path="C:/Users/Tijmen/Documents/My Stuff/repositories/rust-cpython", version="0.7", features=[ "extension-module" ], optional=true }
