[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "elk_mq"
version = "0.1.0"
description = "A Message Queue implementation in rust, available as a python extension module"

requires-python = ">=3"
authors = [
    { name = "Tijmen Verhoef", email = "tijmenmenno@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
