[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "elk_mq"
version = "0.1.1"
description = "A Message Queue implementation in rust, available as a python extension module"

requires-python = ">=3"
authors = [
    { name = "Tijmen Verhoef", email = "tijmenmenno@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
repository = "https://github.com/nemjit001/elk-mq"
homepage = "https://github.com/nemjit001/elk-mq"

[tool.poetry]
include = [
    "Cargo.toml",
    "src/*"
]
